# Unitree-Go1-SLAM-Nav-Doc

./: README.md
UnitreeSLAM/: README.md  build_map.sh  build_map_rviz.sh  start_patrol.sh  start_patrol_rviz.sh
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/include/improved_local_planner/: DBLocalPlannerReconfigureConfig.h
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/lib/pkgconfig/: improved_local_planner.pc  slam_planner.pc  slamware_ros_sdk.pc
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/lib/slam_planner/: mapMessage_node  mqttControl_node  slam_planner_node  slamwalk_node
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/improved_local_planner/cmake/: improved_local_planner-msg-paths.cmake  improved_local_plannerConfig.cmake
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/roseus/ros/improved_local_planner/: manifest.l
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/roseus/ros/slam_planner/: manifest.l
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/roseus/ros/slamware_ros_sdk/: manifest.l
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/slam_planner/cmake/: slam_planner-msg-paths.cmake  slam_plannerConfig.cmake
UnitreeSLAM/catkin_lidar_slam_2d_go1/devel/share/slamware_ros_sdk/cmake/: slamware_ros_sdk-msg-paths.cmake  slamware_ros_sdkConfig.cmake
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/: README.md
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/improved_local_planner/: orignal.rst
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/improved_local_planner/params/: DBlocal_planner_params.yaml
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/slam_planner/launch/: slam_planner_online.launch
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/slam_planner/params/: base_local_planner_params.yaml
UnitreeSLAM/catkin_lidar_slam_2d_go1/src/slamrplidarV2.0/user_manual/: .bashrc  Go1_NX_Upgrade_Steps.md  interfaces  user_manual.md
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/: README.md
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/a2_ros2udp/: CMakeLists.txt  package.xml
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/a2_ros2udp/include/: dog_controller.h  dog_controller_aliengo.h  unitree_legged_sdk_to_ros.h  unitree_legged_sdk_to_ros_aliengo.h
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/a2_ros2udp/src/: new_ros_control_for_a1_sdk_3_3_1.cpp  new_ros_control_for_aliengo_sdk1.0.17.cpp  new_ros_control_for_b1_sdk_20220723.cpp  new_ros_control_for_go1_sdk_20220117.cpp
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/lio_sam/: CMakeLists.txt
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/lio_sam/config/: params.yaml
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/lio_sam/launch/: run.launch
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/lio_sam/launch/include/: module_robot_state_publisher_a1_rslidar16.launch  module_robot_state_publisher_a1_velodyne16.launch  module_robot_state_publisher_aliengo_velodyne16.launch  module_robot_state_publisher_b1_rslidar16.launch  module_robot_state_publisher_go1_rshelios16p.launch
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/lio_sam/src/: imuPreintegration.cpp  mapOptmization.cpp
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/navigation/config/a1/: base_local_planner_params.yaml  costmap_common_params.yaml
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/navigation/config/aliengo/: base_local_planner_params.yaml  costmap_common_params.yaml
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/navigation/config/b1/: base_local_planner_params.yaml  costmap_common_params.yaml
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/navigation/launch/: a1_move_base.launch  a1_navigation.launch  aliengo_move_base.launch  aliengo_navigation.launch  b1_move_base.launch  b1_navigation.launch  go1_move_base.launch  go1_navigation.launch
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/ndt_localization/ndt_omp/: CMakeLists.txt
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/scripts/: add_memory.sh  install_dependency_for_ros_kinetic.sh  install_dependency_for_ros_melodic.sh
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/start/launch/: build_map.launch  build_map_a1_rslidar16.launch  build_map_a1_velodyne16.launch  build_map_aliengo_rslidar16.launch  build_map_aliengo_velodyne16.launch  build_map_b1_rslidar16.launch  build_map_go1_rslidar16.launch  build_map_go1_velodyne16.launch  start_patrol_a1_rslidar16.launch  start_patrol_a1_velodyne16.launch  start_patrol_aliengo_rslidar16.launch  start_patrol_aliengo_velodyne16.launch  start_patrol_b1_rslidar16.launch  start_patrol_go1_rslidar16.launch  start_patrol_go1_velodyne.launch
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/start/src/: patrol.cpp
UnitreeSLAM/catkin_lidar_slam_3d/src/lidar_slam_3d/user_manual/: 3D激光SLAM开发指南.md  RS-LiDAR-16激光雷达的IP配置.md  Velodyne激光雷达的IP配置.html  Velodyne激光雷达的IP配置.md
UnitreeSLAM/install/: README.md
UnitreeSLAM/scripts/: zip_UnitreeSLAM.sh
UnitreeSLAM/sdk/: README.md
UnitreeSLAM/sdk/aliengo_sdk_v1.0.17/: CMakeLists.txt
UnitreeSLAM/sdk/aliengo_sdk_v1.0.17/examples/: example_joystick_aliengo_sport.cpp  example_walk_aliengo_sport.cpp
UnitreeSLAM/sdk/b1_sdk_v20220616/: CMakeLists.txt
UnitreeSLAM/sdk/b1_sdk_v20220616/examples/: example_joystick_B1_sport.cpp  example_start_B1_sport.cpp  example_walk_B1_sport.cpp
UnitreeSLAM/sdk/b1_sdk_v20220723/example/: example_walk.cpp
UnitreeSLAM/sdk/b1_sdk_v20220723/include/unitree_legged_sdk/: comm.h
UnitreeSLAM/sdk/b1_sdk_v20221028/: CMakeLists.txt
UnitreeSLAM/sdk/b1_sdk_v20221028/example/: example_dance.cpp  example_position.cpp  example_torque.cpp  example_velocity.cpp  example_walk.cpp
UnitreeSLAM/sdk/b1_sdk_v20221028/example_py/: example_position.py  example_torque.py  example_velocity.py  example_walk.py
UnitreeSLAM/sdk/unitree_legged_sdk-3.3.1/: CMakeLists.txt
UnitreeSLAM/sdk/unitree_legged_sdk-3.3.1/examples/: example_walk.cpp
UnitreeSLAM/sdk/unitree_legged_sdk-v20220117/examples/: example_walk.cpp
UnitreeSLAM/tools/: detect_ip.sh  ros_communication_test.md  zhuabao.md
(+25 files in other folders)
